# shepherd-targets

./: .codespellrc  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Pipfile  README.md  pyproject.toml
.github/workflows/: build_msp.yaml  build_nrf.yaml  qa_tests.yaml  release_files.yaml
firmware/: metadata_fw.yaml
firmware/msp430_spi_fram/src/: printf.c
firmware/nrf52_benchmark_uart/: Makefile  readme.md
firmware/nrf52_benchmark_uart/include/: peripherals.h
firmware/nrf52_benchmark_uart/src/: main.c  peripherals.c
firmware/nrf52_deep_sleep/: Makefile
firmware/nrf52_demo_rf/include/: pt.h
firmware/nrf52_demo_rf/src/: app.c  peripherals.c  radio.c
firmware/nrf52_rf_survey/schedule_builder/: build.py
firmware/nrf52_rf_test/src/: radio.c
firmware/nrf52_testable/: readme.md
hardware/shepherd_nRF_FRAM_Target_v1.3/: readme.md
hardware/shepherd_nRF_FRAM_Target_v1.3e/: readme.md
hardware/shepherd_target_programmer/: Bill of Materials.xlsx  Pick Place.csv  README.md
hardware/shepherd_target_programmer/GerberX2/: target_adapt_usb_Assembly_Notes.gbr  target_adapt_usb_Bottom_Designator.gbr  target_adapt_usb_Copper_Signal_Bot.gbr  target_adapt_usb_Copper_Signal_Top.gbr  target_adapt_usb_Drawing_1.gbr  target_adapt_usb_Drillmap_1.gbr  target_adapt_usb_Keep-out.gbr  target_adapt_usb_Legend_Bot.gbr  target_adapt_usb_Legend_Top.gbr  target_adapt_usb_NPTH_Drill.gbr  target_adapt_usb_PTH_Drill.gbr  target_adapt_usb_Pads_Bot.gbr  target_adapt_usb_Pads_Top.gbr  target_adapt_usb_Paste_Bot.gbr  (+5 more)
hardware/target_v1.3_cage/: target_cage_PLA_x16.3mf
